Added browsable Theme code links to each demo. Themes folder is now cleartext (not optimized).
svn changeset:1323 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,6 +28,9 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/features">browse features folder</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes/demo">Uses featurebrowser theme</a></span>
   </div>
   
   <div class="sample-code">
@@ -44,6 +47,8 @@
 	<span class="link"><a href="src/com/itmill/toolkit/demo/HelloWorld.java.html">HelloWorld.java</a></span> and 
 	<span class="link"><a href="src/com/itmill/toolkit/demo/Calc.java.html">Calc.java</a></span>
 	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="sample-code">
@@ -59,6 +64,9 @@
 	</div>	
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/UpgradingSample.java.html">UpgradingSample.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   
@@ -70,8 +78,8 @@
 	 Also demonstrates how to integrate Toolkit applications into HTML pages.
 	 </p>
 	 <b>Note:</b> Embedded FeatureBrowser application is the same
-	 application instance that can be accessed as standalone application, see <code>FeatureBrowser.
-	</code></div>	
+	 application instance that can be accessed as standalone application, see <em>FeatureBrowser</em>.
+	</div>	
   </div>
   
   <div class="feature-browser">
@@ -90,6 +98,9 @@
 	</div>	
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/LayoutDemo.java.html">LayoutDemo.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -99,7 +110,8 @@
 	 This example demonstrates how Toolkit interacts with HTML pages
 	 that web designer usually creates. Shows how Toolkit UI components
 	 are placed to HTML pages and how HTML pages are rendered within Toolkit
-	 framework.
+	 framework. Uses custom Example theme that extends Corporate theme.
+	 See theme code and browse to layout directory which contains custom layout's HTML code.
 	</p>
 	<p>
 	 Demonstrates how to create
@@ -108,6 +120,9 @@
 	</div>	
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/CustomLayoutDemo.java.html">CustomLayoutDemo.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes/example">Example</a></span>
   </div>
   
   <div class="feature-browser">
@@ -127,6 +142,9 @@
 	</div>
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/QueryContainerDemo.java.html">QueryContainerDemo.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
    <div class="feature-browser">
@@ -145,6 +163,9 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/TableDemo.java.html">TableDemo.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -162,6 +183,9 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/TreeFilesystemContainer.java.html">TreeFilesystemContainer.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -178,6 +202,9 @@
 	</div>	
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/TreeFilesystem.java.html">TreeFilesystem.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -191,6 +218,9 @@
 	</div>
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/SelectDemo.java.html">SelectDemo.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -204,6 +234,9 @@
 	</div>
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/FilterSelect.java.html">FilterSelect.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Base theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -213,6 +246,9 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/ModalWindow.java.html">ModalWindow.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
 
   <div class="feature-browser">
@@ -223,6 +259,9 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/KeyboardShortcut.java.html">KeyboardShortcut.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -234,6 +273,9 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/Parameters.java.html">Parameters.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
 
   <div class="feature-browser">
@@ -244,6 +286,9 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/BufferedComponents.java.html">BufferedComponents.java</a></span>
+	<br />
+	Theme code:
+	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
 
