Theme link only for CustomLayout demo.
svn changeset:1335 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,9 +28,6 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/features">browse features folder</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes/demo">Uses featurebrowser theme</a></span>
   </div>
   
   <div class="sample-code">
@@ -46,9 +43,6 @@
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/HelloWorld.java.html">HelloWorld.java</a></span> and 
 	<span class="link"><a href="src/com/itmill/toolkit/demo/Calc.java.html">Calc.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="sample-code">
@@ -64,9 +58,6 @@
 	</div>	
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/UpgradingSample.java.html">UpgradingSample.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   
@@ -98,9 +89,6 @@
 	</div>	
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/LayoutDemo.java.html">LayoutDemo.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -122,7 +110,7 @@
 	<span class="link"><a href="src/com/itmill/toolkit/demo/CustomLayoutDemo.java.html">CustomLayoutDemo.java</a></span>
 	<br />
 	Theme code:
-	<span class="link"><a href="lib/themes/example">Example</a></span>
+	<span class="link"><a href="lib/themes/example">Example theme with custom layouts</a></span>
   </div>
   
   <div class="feature-browser">
@@ -142,9 +130,6 @@
 	</div>
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/QueryContainerDemo.java.html">QueryContainerDemo.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
    <div class="feature-browser">
@@ -163,9 +148,6 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/TableDemo.java.html">TableDemo.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -183,9 +165,6 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/TreeFilesystemContainer.java.html">TreeFilesystemContainer.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -202,9 +181,6 @@
 	</div>	
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/TreeFilesystem.java.html">TreeFilesystem.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -218,9 +194,6 @@
 	</div>
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/SelectDemo.java.html">SelectDemo.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -234,9 +207,6 @@
 	</div>
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/FilterSelect.java.html">FilterSelect.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Base theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -246,9 +216,6 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/ModalWindow.java.html">ModalWindow.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
 
   <div class="feature-browser">
@@ -259,9 +226,6 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/KeyboardShortcut.java.html">KeyboardShortcut.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
   <div class="feature-browser">
@@ -273,9 +237,6 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/Parameters.java.html">Parameters.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
 
   <div class="feature-browser">
@@ -286,9 +247,6 @@
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/BufferedComponents.java.html">BufferedComponents.java</a></span>
-	<br />
-	Theme code:
-	<span class="link"><a href="lib/themes">Uses Corporate theme</a></span>
   </div>
   
 
