Brought back theme link to CustomLayout demo.
svn changeset:1345 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -108,6 +108,9 @@
 	</div>	
 	Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/CustomLayoutDemo.java.html">CustomLayoutDemo.java</a></span>
+	<br /> 
+	Theme code: 
+	<span class="link"><a href="themes/example">Example theme with custom HTML layouts</a></span> 
   </div>
   
   <div class="feature-browser">
