--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -123,7 +123,7 @@
 	</p>
 	<p>
 	 Demonstrates how to create <em>com.itmill.toolkit.data.Container</em> and set it as 
-	 datasource to UI components <em>com.itmill.toolkit.ui.Component.Tree</em>, how to 
+	 data source to UI components <em>com.itmill.toolkit.ui.Component.Tree</em>, how to 
 	 receive ExpandEvent and implement <em>com.itmill.toolkit.ui.Tree.ExpandListener</em>, 
 	 how to use <em>com.itmill.toolkit.event.Action</em>.
     </p>
@@ -143,8 +143,6 @@
 	 Demonstrates another possibility how event framework may be used,
 	 in this example specific methods are registered for button click events.
 	 </p>
-	 <b>Note:</b> This application instance is embedded
-	 to jsp page also, see <em>ToolkitMashup.jsp</em>.
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/TableDemo.java.html">TableDemo.java</a></span>
@@ -157,7 +155,7 @@
 	 Browsable file explorer using Toolkit Tree component.
 	 </p>
 	 Demonstrates how to
-  	 use <em>com.itmill.toolkit.ui.Component.Tree</em> datasource container,
+  	 use <em>com.itmill.toolkit.ui.Component.Tree</em> data source container,
 	 how to create <em>com.itmill.toolkit.data.util.FilesystemContainer</em>,
 	 how to read <em>com.itmill.toolkit.ui.Component.Event</em> objects, how
 	 to receive and handle any event by implementing
@@ -231,7 +229,7 @@
   <div class="feature-browser">
 	<h3><a href="Parameters?renderingMode=ajax">URI and Parameter handling demo</a></h3>
 	<div class="option">
-	 This is a demonstration of how URL parameters can be recieved and handled.
+	 This is a demonstration of how URL parameters can be received and handled.
 	 Parameters and URL:s can be received trough the windows by registering
 	 URIHandler and ParameterHandler classes window.
 	</div>
