--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -220,7 +220,7 @@
 	<h3><a href="KeyboardShortcut?renderingMode=ajax">Keyboard events demo</a></h3>
 	<div class="option">
 	 Contains few Toolkit UI components that can be interacted by pressing keys in keyboard.
-	 <b>Note</b>: This feature is under development and is considered as alpha.
+	 <b>Note</b>: This feature is under development and is considered as beta.
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/KeyboardShortcut.java.html">KeyboardShortcut.java</a></span>
