--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -46,7 +46,7 @@ table.issues td {
 
 <h3>General</h3>
 <p>
-Version 4.0.1 is an maintenance release for IT Mill Toolkit 4.0 branch. It contains bugfixes for various browsers including few critical fixes for mobile terminals. We have added multiple new demos, source code included. Client-side source code is also provided for those who wish to look further how new themes or custom UI components are created for Toolkit applications, see themes under lib directory. Note that client-side API regarding JavaScript and CSS files will be re-implemented within 2007. Contact support@itmill.com for more information about client-side API changes.
+Version 4.0.1 is an maintenance release for IT Mill Toolkit 4.0 branch. It contains bugfixes for various browsers including few critical fixes for mobile terminals. We have added multiple new demos, source code included. Client-side source code is also provided for those who wish to look further how new themes or custom UI components are created for Toolkit applications, see themes under lib directory. Note, that client-side API (i.e. JavaScript and CSS files) are subject to change during 2007. These changes are required for better client-side compatibility, and they will not affect on the server-side Java APIs and components. Contact support@itmill.com for more information about client-side API changes.
 </p>
 <p>
 Following changes may be considered as enhancements even though this is a maintenance release. See demos for more information.
@@ -62,10 +62,9 @@ software. This is due to started Web service which is required to run demos.
 You have to ignore warnings or temporarily accept connections to port 8888 on your firewall software.
 </p>
 <p>
-Previously Toolkit library was called <a href="http://www.millstone.org">Millstone UI Library</a>. The last publicly available
+A simple Millstone migration example is also included in demos. Previously Toolkit library was called <a href="http://www.millstone.org">Millstone UI Library</a>. The last publicly available
 version of <a href="http://www.millstone.org">Millstone UI Library</a> is 3.1.1. This new generation 4.0.1
-version of the library is still API-level compatible with the previous
-version.
+version of the library is still API-level compatible with the previous version.
 </p>
 <p>
 See <a href="index.html">index.html</a> for more information.
