--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,15 +15,15 @@
   <div class="feature-browser">
 	<h4>Feature Browser</h4>
 	<div class="option">
-	 <span class="link"><a href="features?renderingMode=detect">Autodetected mode</a></span>
+	 <span class="link"><a href="FeaturesApplication?renderingMode=detect">Autodetected mode</a></span>
 	 <span class="desc">Use AJAX if supported by browser, otherwise fallback to HTML mode</span>
 	</div>
 	<div class="option">
-	 <span class="link"><a href="features?renderingMode=ajax">AJAX mode</a></span>
+	 <span class="link"><a href="FeaturesApplication?renderingMode=ajax">AJAX mode</a></span>
 	 <span class="desc">Select AJAX-based technology mode</span>
 	</div>
 	<div class="option">
-	 <span class="link"><a href="features?renderingMode=html">HTML mode</a></span>
+	 <span class="link"><a href="FeaturesApplication?renderingMode=html">HTML mode</a></span>
 	 <span class="desc">Select page based request/response technology mode</span>
 	</div>
 	<br />Source code:
