--- a/WebContent/openajax/index.html
+++ b/WebContent/openajax/index.html
@@ -103,18 +103,18 @@
 				The <script> tag below that references SampleAjaxLibrary.js must be removed and 
 				instead you will need to have your own Ajax library loaded instead.
 				**************************************************************************** -->
-	<link rel="stylesheet" href="../features/RES/base/css/base-ajax.css" type="text/css" />
-	<link rel="stylesheet" href="../features/RES/base/css/calendar-default.css" type="text/css" />
-	<script src="../features/RES/base/script/ajax-client.js" type="text/javascript"></script>
-	<script src="../features/RES/base/script/base-ajax-components.js" type="text/javascript"></script>
-	<script src="../features/RES/base/ext/jscalendar/calendar.js" type="text/javascript"></script>
-	<script src="../features/RES/base/ext/jscalendar/lang/calendar-en.js" type="text/javascript"></script>
-	<script src="../features/RES/base/ext/jscalendar/calendar-setup.js" type="text/javascript"></script>
-	<script src="../features/RES/base/ext/firebug/firebug.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="../features/RES/corporate/css/corporate-ajax.css" type="text/css" />
-	<script src="../features/RES/corporate/script/corporate-ajax-components.js" type="text/javascript"></script>
-	<script src="../features/RES/demo/featurebrowser/components.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="../features/RES/demo/featurebrowser/featurebrowser.css" type="text/css" />
+	<link rel="stylesheet" href="../FeaturesApplication/RES/base/css/base-ajax.css" type="text/css" />
+	<link rel="stylesheet" href="../FeaturesApplication/RES/base/css/calendar-default.css" type="text/css" />
+	<script src="../FeaturesApplication/RES/base/script/ajax-client.js" type="text/javascript"></script>
+	<script src="../FeaturesApplication/RES/base/script/base-ajax-components.js" type="text/javascript"></script>
+	<script src="../FeaturesApplication/RES/base/ext/jscalendar/calendar.js" type="text/javascript"></script>
+	<script src="../FeaturesApplication/RES/base/ext/jscalendar/lang/calendar-en.js" type="text/javascript"></script>
+	<script src="../FeaturesApplication/RES/base/ext/jscalendar/calendar-setup.js" type="text/javascript"></script>
+	<script src="../FeaturesApplication/RES/base/ext/firebug/firebug.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="../FeaturesApplication/RES/corporate/css/corporate-ajax.css" type="text/css" />
+	<script src="../FeaturesApplication/RES/corporate/script/corporate-ajax-components.js" type="text/javascript"></script>
+	<script src="../FeaturesApplication/RES/demo/featurebrowser/components.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="../FeaturesApplication/RES/demo/featurebrowser/featurebrowser.css" type="text/css" />
 
 	<!--	****************************************************************************
 				YOU MAY CUSTOMIZE THE FOLLOWING LOGIC.
@@ -201,8 +201,8 @@
 <script language="JavaScript">
 	// Initialize client part of the IT Mill Toolkit and start it
 	function ITMillToolkit_Start () {
-		var client = new itmill.Client(document.getElementById('ajax-window'),"../features/UIDL/","../features/RES/base/client/",document.getElementById('ajax-wait'));
-		(new itmill.themes.Demo("../features/RES/demo/")).registerTo(client);
+		var client = new itmill.Client(document.getElementById('ajax-window'),"../FeaturesApplication/UIDL/","../FeaturesApplication/RES/base/client/",document.getElementById('ajax-wait'));
+		(new itmill.themes.Demo("../FeaturesApplication/RES/demo/")).registerTo(client);
 		client.start();
 	}
 	OpenAjax.addOnLoad("ITMillToolkit_Start", null, "library");
