Correcting the urls in examples index.html
svn changeset:1869 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,16 +15,8 @@
   <div class="feature-browser">
 	<h4>Feature Browser</h4>
 	<div class="option">
-	 <span class="link"><a href="FeaturesApplication?renderingMode=detect">Autodetected mode</a></span>
-	 <span class="desc">Use AJAX if supported by browser, otherwise fallback to HTML mode</span>
-	</div>
-	<div class="option">
-	 <span class="link"><a href="FeaturesApplication?renderingMode=ajax">AJAX mode</a></span>
-	 <span class="desc">Select AJAX-based technology mode</span>
-	</div>
-	<div class="option">
-	 <span class="link"><a href="FeaturesApplication?renderingMode=html">HTML mode</a></span>
-	 <span class="desc">Select page based request/response technology mode</span>
+	 <span class="link"><a href="FeaturesApplication/">FeatureBrowser</a></span>
+	 <span class="desc">Test bench application for trying out different components and features of the IT Mill Toolkit</span>
 	</div>
 	<br />Source code:
 	<span class="link"><a href="src/com/itmill/toolkit/demo/features">browse features folder</a></span>
@@ -33,11 +25,11 @@
   <div class="sample-code">
 	<h3>Simple application demos</h3>
 	<div class="option">
-	 <span class="link"><a href="HelloWorld?renderingMode=ajax">HelloWorld</a></span>
+	 <span class="link"><a href="HelloWorld/">HelloWorld</a></span>
 	 <span class="desc">Simple Toolkit application.</span>
 	</div>
 	<div class="option">
-	 <span class="link"><a href="Calc?renderingMode=ajax">Calc</a></span>
+	 <span class="link"><a href="Calc/">Calc</a></span>
 	 <span class="desc">Simple Toolkit application where events are used.</span>
 	</div>
 	<br />Source code:
@@ -46,7 +38,7 @@
   </div>
   
   <div class="sample-code">
-	<h3><a href="UpgradingSample?renderingMode=ajax">Long lifecycle of Toolkit applications</a></h3>
+	<h3><a href="UpgradingSample/">Long lifecycle of Toolkit applications</a></h3>
 	<div class="option">
 	<p>
 	Demonstrates sample <a href="http://www.millstone.org/">Millstone</a> application that was ajaxified (upgraded to Toolkit 4.0.0)
@@ -74,7 +66,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="LayoutDemo?renderingMode=ajax">Layout demo</a></h3>
+	<h3><a href="LayoutDemo/">Layout demo</a></h3>
 	<div class="option">
 	<p>
 	 This example demonstrates layouts for Tookit application.
@@ -92,7 +84,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="CustomLayoutDemo?renderingMode=ajax">Custom layout and custom theme demo</a></h3>
+	<h3><a href="CustomLayoutDemo/">Custom layout and custom theme demo</a></h3>
 	<div class="option">
 	<p>
 	 This example demonstrates how Toolkit interacts with HTML pages
@@ -114,7 +106,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="QueryContainerDemo?renderingMode=ajax">Tree using QueryContainer demo</a></h3>
+	<h3><a href="QueryContainerDemo/">Tree using QueryContainer demo</a></h3>
 	<div class="option">
 	<p>
 	 This example shows how Table, Select and Tree UI components can use Containers. 
@@ -133,7 +125,7 @@
   </div>
   
    <div class="feature-browser">
-	<h3><a href="TableDemo?renderingMode=ajax">Table demo</a></h3>
+	<h3><a href="TableDemo/">Table demo</a></h3>
 	<div class="option">
 	 <p>
 	 Similar to <em>Tree using QueryContainer demo</em> but uses different style
@@ -149,7 +141,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="TreeFilesystemContainer?renderingMode=ajax">Tree using FilesystemContainer demo</a></h3>
+	<h3><a href="TreeFilesystemContainer/">Tree using FilesystemContainer demo</a></h3>
 	<div class="option">
 	 <p>
 	 Browsable file explorer using Toolkit Tree component.
@@ -166,7 +158,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="TreeFilesystem?renderingMode=ajax">Tree item handling demo</a></h3>
+	<h3><a href="TreeFilesystem/">Tree item handling demo</a></h3>
 	<div class="option">
 	 <p>
 	 Browsable file explorer using Toolkit Tree component.
@@ -182,7 +174,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="SelectDemo?renderingMode=ajax">Select demo</a></h3>
+	<h3><a href="SelectDemo/">Select demo</a></h3>
 	<div class="option">
 	<p>
 	 This example shows select component with default and lazy loading functionality enabled (a.k.a Google Suggest).
@@ -195,7 +187,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="FilterSelect?renderingMode=ajax">FilterSelect demo</a></h3>
+	<h3><a href="FilterSelect/">FilterSelect demo</a></h3>
 	<div class="option">
 	<p>
 	 This example shows three select components with lazy loading functionality enabled.
@@ -208,7 +200,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="ModalWindow?renderingMode=ajax">Modal window</a></h3>
+	<h3><a href="ModalWindow/">Modal window</a></h3>
 	<div class="option">
 	 Example of how Modal Windows may be created using Window component.
 	</div>
@@ -217,7 +209,7 @@
   </div>
 
   <div class="feature-browser">
-	<h3><a href="KeyboardShortcut?renderingMode=ajax">Keyboard events demo</a></h3>
+	<h3><a href="KeyboardShortcut/">Keyboard events demo</a></h3>
 	<div class="option">
 	 Contains few Toolkit UI components that can be interacted by pressing keys in keyboard.
 	 <b>Note</b>: This feature is under development and is considered as beta.
@@ -227,7 +219,7 @@
   </div>
   
   <div class="feature-browser">
-	<h3><a href="Parameters?renderingMode=ajax">URI and Parameter handling demo</a></h3>
+	<h3><a href="Parameters/">URI and Parameter handling demo</a></h3>
 	<div class="option">
 	 This is a demonstration of how URL parameters can be received and handled.
 	 Parameters and URL:s can be received trough the windows by registering
@@ -238,7 +230,7 @@
   </div>
 
   <div class="feature-browser">
-	<h3><a href="BufferedComponents?renderingMode=ajax">Buffered UI components demo</a></h3>
+	<h3><a href="BufferedComponents/">Buffered UI components demo</a></h3>
 	<div class="option">
 	 Explains how to use buffering with UI components, and how to perform commit and discard functions.
 	 With buffered UI components underlying data objects and UI objects have separate states.
