Correcting the urls in examples index.html
svn changeset:1870 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,7 +13,7 @@
 
 
   <div class="feature-browser">
-	<h4>Feature Browser</h4>
+	<h4><a href="FeaturesApplication/">Feature Browser</a></h4>
 	<div class="option">
 	 <span class="link"><a href="FeaturesApplication/">FeatureBrowser</a></span>
 	 <span class="desc">Test bench application for trying out different components and features of the IT Mill Toolkit</span>
