--- a/license/licensing-guidelines.html
+++ b/license/licensing-guidelines.html
@@ -59,6 +59,8 @@ p.heading {
 		about licensing options, please contact sales at <a href="http://www.itmill.com/">
 		IT Mill Ltd</a>.</p>
 		
+		
+
 		<h1><a name="opensource"/>Open Source License</h1>
 		
 		The following libraries are included in this package and are released with 
@@ -135,7 +137,8 @@ p.heading {
 		<ul>
 			<li><b>IT Mill Toolkit Testing Tools</b>: Demo version of Testing Tools is
 			included in this distribution package for evaluation purposes. Continuous or
-			production use of this demo package is forbidden without commercial license.</li> 
+			production use of this demo package is forbidden without <a 
+				href="#commercial">commercial license</a>.</li> 
 			<li><b>Support services</b>: No support is provided, but use of discussion 
 			forums is encouraged.</li> 
 			<li><b>Guarantee</b>: Open Source version is provided without guarantee. 
@@ -143,88 +146,11 @@ p.heading {
 			<li><b>IPR protection</b>: No IPR protection is provided other than stated
 			in the Apache 2.0 license.</li>
 		</ul>		
-		
-		
-		<h1><a name="commercial"/>Commercial License</h1>
-		
-		
-		
-		Licensing in nutshell:
-		<ul>
-			<li>Free for learning, development and testing</li>
-			<li>Commercial license is required for production environment</li>
-			<li>For distributing IT Mill Toolkit as a part of your own
-			product, either purchase suitable commercial deployment licenses or
-			contact us for OEM-license tailored for your needs.</li>
-		</ul>
-		
-		<h3>Free use</h3>
-		
-		<p>Application development is complitely free. Furthermore, you can deploy 
-		the developed application for testing and validation at the development time.</p>
-		
-		<h3>Commercial use</h3>
-		
-		<p>A commercial license must be obtained for production use of the 
-		applications that use IT Mill Toolkit libraries.</p>
-		
-		<p>A deployment license is required for each deployed copy of a program
-		that uses Toolkit library. To be more exact, each Java Virtual
-		Machine (JVM) that runs a program that uses IT Mill Toolkit libraries, must have an
-		unique deployment license. For example, if the program is
-		deployed to multiple servers (for load balancing or other reasons), each
-		server needs an unique license.</p>
-		
-		<p>If the number of server installations is so high that separate deployment
-		licenses are not an option, please contact <a href="http://www.itmill.com/">sales</a>
-		to hear about OEM licensing options.</p>
-		
-		<h2>Purchasing Commercial License</h2>
-		
-		<p>Deployment licenses can be purchased online from <a
-			href="http://www.itmill.com/">IT Mill Ltd</a>.</p>
-		
-		<p>If you are interested in OEM-license for your product, please
-		contact sales at <a href="http://www.itmill.com/">IT Mill Ltd</a>.</p>
-		
-		<h2>License terms</h2>
-		
-		<p>The actual legal license text is in <a href="license.pdf">license.pdf</a>.</p>
-		
-		<h2>License files</h2>
-		
-		<p>Technically license is stored as itmill-toolkit-license.xml -file, that is usually
-		store in WEB-INF -directory of the web-application. The license file 
-		contains information about the scope and limitations of the license in fairly readable
-		form, so you might want to check the file contents. Toolkit package is shipped with
-		unlimited license for development and testing purposes.</p>
-		
-		<p>Free unlimited development license <a href="lib/itmill-toolkit-license.xml">
-		license-file</a> is included in product package in 
-		lib -directory</p>
-		
-		<h2>Open Source Edition</h2>
-		
-		<p>The previous version 3 of the product was called Millstone User Interface Library. 
-		Millstone library was licensed with very liberal LGPL-license. The latest free release of 
-		Millstone User Interface Library (version 3.1) can still be found from sourceforge.</p>
-		
-		<p>The new version 4 of the library, now called IT Mill Toolkit, is not licensed with 
-		an open source license. This does not mean that the sources are closed, source code is 
-		included in the product package for your convenience. </p>
-		
-		<p>Why did we change the license? Putting a clear transparent pricing model on the 
-		product makes our customers decision-making easier. They know how much they are
-		paying for and that they can expect commercial grade quality product for their money.</p>
-		
-		<h2>Educational use</h2>
-		
-		<p>If you want to use the IT Mill Toolkit for teaching programming, web
-		development or user interface design, you can apply for educational
-		license by contacting sales at <a href="http://www.itmill.com/">IT
-		Mill Ltd</a>.</p>
-	
+					
 	</div>
-	
+			
+	<h1><a name="commercial"/>Commercial License</h1>
+
+
 	</body>
 </html>
