--- a/license/licensing-guidelines.html
+++ b/license/licensing-guidelines.html
@@ -127,6 +127,16 @@ p.heading {
 		    <td class="license"><a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License v. 2.1</a></td>
 		    <td class="location"><a href="http://webkit.org/building/checkout.html">webkit.org</a></td>
 		  </tr>
+		  <tr>
+		    <td class="package">Winstone server???</td>
+		    <td class="license"></td>
+		    <td class="location"></td>
+		  </tr>
+		  <tr>
+		    <td class="package">Multipart/upload parser library???</td>
+		    <td class="license"></td>
+		    <td class="location"></td>
+		  </tr>
 		</tbody></table>
 		
 		<p>Please evaluate the licenses above to assure that they
