--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -8,8 +8,8 @@
 		};
 	</script>
 	<script src="http://maps.google.com/maps?file=api&amp;v=2" type="text/javascript"></script>
-	<script language='javascript' src='ITK-INF/widgetsets/com.itmill.toolkit.demo.reservation.gwt.WidgetSet/com.itmill.toolkit.demo.reservation.gwt.WidgetSet.nocache.js'></script>
-	<link REL="stylesheet" TYPE="text/css" HREF="ITK-INF/themes/reservr/styles.css">
+	<script language='javascript' src='ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.WidgetSet/com.itmill.toolkit.demo.reservation.gwt.WidgetSet.nocache.js'></script>
+	<link REL="stylesheet" TYPE="text/css" HREF="ITMILL/themes/reservr/styles.css">
 </head>
 <body>
 	<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
