Reservr look & feel mainly
svn changeset:2514 branch:trunk

--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -4,7 +4,7 @@
 	<title>IT Mill Toolkit 5 Demo: Reservr</title>
 	<script type="text/javascript">
 		var itmtk = {
-			appUri:'Reservr', pathInfo: '/'
+			appUri:'/toolkit/Reservr', pathInfo: '/'
 		};
 	</script>
 	<script src="http://maps.google.com/maps?file=api&amp;v=2" type="text/javascript"></script>
@@ -13,6 +13,11 @@
 </head>
 <body>
 	<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
+	<div id="header">
+		<img src="ITMILL/themes/reservr/reservr.jpg" align="top"/>
+		<span id="logo">Reservr Inc</span>
+		<span>&raquo; Representational cars on-the-road</span>
+	</div>
 	<div id="itmtk-ajax-window"></div>	
 </body>
 </html>
