--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -14,9 +14,10 @@
 <body>
 	<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
 	<div id="header">
-		<img src="ITMILL/themes/reservr/reservr.jpg" align="top"/>
-		<span id="logo">Reservr Inc</span>
-		<span>&raquo; Representational cars on-the-road</span>
+		<ximg src="ITMILL/themes/reservr/reservr.jpg" align="top"/>
+		<span id="logo"> Reservr Inc</span>
+		<span id="arrow"> </span>
+		<span id="slogan">Representational cars on-the-road</span>
 	</div>
 	<div id="itmtk-ajax-window"></div>	
 </body>
