Changes reservr.html UIDL url back to to relational as #971 has been fixes
svn changeset:2524 branch:trunk

--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -4,7 +4,7 @@
 	<title>IT Mill Toolkit 5 Demo: Reservr</title>
 	<script type="text/javascript">
 		var itmtk = {
-			appUri:'/toolkit/Reservr', pathInfo: '/'
+			appUri:'Reservr', pathInfo: '/'
 		};
 	</script>
 	<script src="http://maps.google.com/maps?file=api&amp;v=2" type="text/javascript"></script>
