--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,6 +12,37 @@
 <div id="toolkit"></div>
 
 
+
+<div class="feature-browser">
+	<h4><a href="reservr.html">Reservr</a></h4>
+	<div class="option">
+	 <span class="link"><a href="reservr.html">Reservr</a></span>
+	 <span class="desc">Business demo.</span>
+	</div>
+	<br />Source code:
+	<span class="link"><a href="src/com/itmill/toolkit/demo/reservation">browse source</a></span>
+  </div>
+  
+  <div class="feature-browser">
+	<h4><a href="colorpicker/">Colorpicker widget</a></h4>
+	<div class="option">
+	 <span class="link"><a href="colorpicker/">Colorpicker widget</a></span>
+	 <span class="desc">Demonstrates how to make new widget easily with Toolkit.</span>
+	</div>
+	<br />Source code:
+	<span class="link"><a href="src/com/itmill/toolkit/demo/colorpicker">browse source</a></span>
+  </div>
+  
+<div class="feature-browser">
+	<h4><a href="TestBench/">TestBench</a></h4>
+	<div class="option">
+	 <span class="link"><a href="TestBench/">TestBench</a></span>
+	 <span class="desc">Contains most new components. FIXME: will be removed from public release.</span>
+	</div>
+	<br />Source code:
+	<span class="link"><a href="src/com/itmill/toolkit/tests">browse tests folder</a></span>
+  </div>
+  
   <div class="feature-browser">
 	<h4><a href="FeaturesApplication/">Feature Browser</a></h4>
 	<div class="option">
