--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -3,7 +3,7 @@
 <head>
 	<title>IT Mill Toolkit 5 Demo: Reservr</title>
 	<script type="text/javascript">
-		var itmtk = {
+		var itmill = {
 			appUri:'Reservr', pathInfo: '/'
 		};
 	</script>
@@ -14,11 +14,10 @@
 <body>
 	<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
 	<div id="header">
-		<ximg src="ITMILL/themes/reservr/reservr.jpg" align="top"/>
 		<span id="logo"> Reservr Inc</span>
 		<span id="arrow"> </span>
 		<span id="slogan">Representational cars on-the-road</span>
 	</div>
-	<div id="itmtk-ajax-window"></div>	
+	<div id="itmill-ajax-window"></div>	
 </body>
 </html>
