Added CachingDemo; a small client-side caching demo.
svn changeset:2661 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -67,6 +67,17 @@
 	<span class="link"><a href="src/com/itmill/toolkit/demo/HelloWorld.java.html">HelloWorld.java</a></span> and 
 	<span class="link"><a href="src/com/itmill/toolkit/demo/Calc.java.html">Calc.java</a></span>
   </div>
+
+  <div class="sample-code">
+	<h3>Client-side caching demo</h3>
+	<div class="option">
+	 <span class="link"><a href="CachingDemo/">CachingDemo</a></span>
+	 <span class="desc">Simple demo of client-side caching.</span>
+	</div>
+	<br />Source code:
+	<span class="link"><a href="src/com/itmill/toolkit/demo/CachingDemo.java.html">CachingDemo.java</a></span> 
+  </div>
+
   
   <div class="sample-code">
 	<h3><a href="UpgradingSample/">Long lifecycle of Toolkit applications</a></h3>
