--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -8,7 +8,7 @@
 		};
 	</script>
 	<script src="http://maps.google.com/maps?file=api&amp;v=2" type="text/javascript"></script>
-	<script language='javascript' src='ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.WidgetSet/com.itmill.toolkit.demo.reservation.gwt.WidgetSet.nocache.js'></script>
+	<script language='javascript' src='ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'></script>
 	<link REL="stylesheet" TYPE="text/css" HREF="ITMILL/themes/reservr/styles.css">
 </head>
 <body>
