--- a/WebContent/windoweddemos.html
+++ b/WebContent/windoweddemos.html
@@ -4,7 +4,7 @@
 <title>IT Mill Toolkit 5</title>
 <script type="text/javascript">
 	var itmill = {
-		appUri:'/toolkit/WindowedDemos', pathInfo: '/'
+		appUri:'WindowedDemos', pathInfo: '/'
 };
 </script>
 <style>
