Fixed typo in comment about Google Maps API key
svn changeset:2941 branch:trunk

--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -8,7 +8,7 @@
 		};
 	</script>
 	<!-- 
-		Google Maps needs an API key if you're not runnign this demo on "localhost". 
+		Google Maps needs an API key if you're not running this demo on "localhost". 
 		
 		You can get a Google Maps API key here:
 			http://www.google.com/apis/maps/signup.html
