--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>IT Mill Toolkit 4</title>
+<title>IT Mill Toolkit 5</title>
 <link href="doc/manual/html-style/local.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -18,11 +18,10 @@
 	Toolkit will then render it as a stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> single-page web application.
 	</p>
 	<p>
-	AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/default.mspx" target="new">
+	Supports <a href="http://www.microsoft.com/windows/ie/default.mspx" target="new">
 	Internet Explorer</a> 6-7, <a href="http://www.mozilla.com/firefox/" target="new">
 	Firefox</a> 1.5-2, <a href="http://www.opera.com/" target="new">
-	Opera</a> 9, <a href="http://www.apple.com/safari/" target="new">Safari</a> 2 and many others, see <a href="ReleaseNotes.html">Release Notes</a> for more information.
-	Older or limited browsers are supported by Toolkit's full-page HTML rendering mode.
+	Opera</a> 9, <a href="http://www.apple.com/safari/" target="new">Safari</a> 2 and many others.
 	</p>
    </div>
   <div class="bottom"><div></div></div>
@@ -35,10 +34,7 @@
   <div class="content">
 	<h4>Library</h4>
 	<ul>
-	<li><a href="lib/itmill-toolkit-4.0.2.jar">Toolkit</a></li>
-	<li><a href="lib/itmill-toolkit-src-4.0.2.jar">Toolkit Source</a></li>
-	<li><a href="lib/itmill-toolkit-themes-4.0.2.jar">Themes</a></li>
-	<li><a href="lib/itmill-toolkit-license.xml">Developer license</a></li>
+	<li><a href="lib/itmill-toolkit-<version></version>.jar">Toolkit binary, source, default themes and widgetsets</a></li>
 	</ul>
 
 	<h4>Documentation</h4>
@@ -68,11 +64,11 @@
  <h2>Demo and sample code</h2>
  <p>To get a quick feel for Toolkit, please have a look at the demos:</p>
 	<ul>
-	<li><a href="http://toolkit.itmill.com/demo/?s=4.0.2-package">Online at IT Mill</a></li>
+	<li><a href="http://toolkit.itmill.com/demo/?s=<version></version>-package">Online at IT Mill</a></li>
 	<li>To run demos locally, run start.bat (Windows) or start.sh (Mac or Linux) 
 	in the <a href="demo">demo -directory</a>.
 	After the local demo server has started, the demos are running at
-	<a href="http://127.0.0.1:8080/">http://127.0.0.1:8080/</a>. 
+	<a href="http://127.0.0.1:8888/">http://127.0.0.1:8888/</a>. 
 	</li>
 	</ul>
 </div>
@@ -88,8 +84,8 @@ For professional developers and corporate clients, IT Mill offers a wide range o
 <div id="license">
 <h2>License</h2>
 <ul>
-	<li><a href="licensing-guidelines.html">Toolkit Licensing Guidelines</a></li>
-	<li><a href="license.pdf">License (PDF)</a></lI>
+	<li><a href="license/licensing-guidelines.html">Toolkit Licensing Guidelines</a></li>
+	<li><a href="license/itmill-commercial-license.pdf">License (PDF)</a></lI>
 	<li>Prices and purchase from <a href="mailto:sales@itmill.com">sales@itmill.com</a></li>
 </ul>
 </div>
